<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        android:title="Date &amp; Time"
        <SwitchPreference android:key="auto_time"
            android:title="@string/date_time_auto"
            android:summaryOn="@string/date_time_auto_summaryOn"
            android:summaryOff="@string/date_time_auto_summaryOff"
            />
    <EditTextPreference
        android:key="ntp_server"
        android:singleLine="true"
        android:title="NTP server"
        android:summary="0.0.0.0"
        android:dialogTitle="NTP Server" />
        <com.ctos.systempanel.DatePreference
            android:key="date"
            android:title="@string/date_time_set_date"
            android:defaultValue="1200"
            android:summary="0"
            />
        <com.ctos.systempanel.TimePreference
            android:key="time"
            android:title="@string/date_time_set_time"
            android:defaultValue="1200"
            android:summary="0"/>
    <Preference
            android:key="timezone"
            android:title="@string/date_time_set_timezone"
            android:summary="GMT-8:00"
            />
    <SwitchPreference
        android:key="24_hour"
            android:title="@string/date_time_24hour"
            />
</PreferenceScreen>